# ProtoForge

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FAULT_INJECTION.md  INTEGRATION.md  LICENSE  README.md  README_EN.md  SECURITY.md  _check_syntax.py  alembic.ini  conftest.py  docker-compose.simple.yml  docker-compose.yml  fix_quotes2.py  fix_router_full.py  install.bat  install.sh  pyproject.toml  缺失和可改进的点.md
.github/workflows/: check-consistency.yml  docker-publish.yml  integration-test.yml
.trae/rules/: project_rules.md
ai/: ai.md  predict.py  predict_v2.py  predict_v3_single_scene.py  pridict_v4.py  pridict_v5.py
ai/predictor/: README.md  __init__.py  anomaly.py  config.py  discovery.py  models.py  phase_lock.py  profiling.py  service.py  signal.py  state.py  storage.py  template.py
docs/: curl.md
grafana/: protoforge-dashboard.json
helm/protoforge/: Chart.yaml  values.yaml
helm/protoforge/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  postgres.yaml  pvc.yaml  secrets.yaml  service.yaml
k8s/: deployment.yaml  ingress.yaml  secrets.yaml
migrations/: env.py  integration_tables.sql
migrations/versions/: 001_initial_schema.py  002_add_audit_recordings_integration.py
protoforge/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  installer.py  main.py  mqtt_auth.py
protoforge/.github/workflows/: check-consistency.yml  integration-test.yml
protoforge/api/v1/: _helpers.py  auth.py  auth_routes.py  common.py  device_routes.py  edgelite_routes.py  forward_routes.py  integration.py  log_routes.py  protocol_routes.py  rate_limit.py  recorder_routes.py  router.py  scenario_routes.py  system_routes.py  template_routes.py  test_routes.py  webhook_routes.py
protoforge/core/: __init__.py  _integration_legacy.py  audit.py  auth.py  cnc_metric_generator.py  defaults.py  demo.py  device.py  edgelite.py  engine.py  event_bus.py  failover.py  fault.py  forward.py  generator.py  integration.py  log_bus.py  messages.py  metrics.py  recorder.py  scenario.py  simulators.py  template.py  testing.py  webhook.py
protoforge/core/integration/: __init__.py  auth.py  channel.py  manager.py  metrics.py  protocol.py  (+3 more)
protoforge/db/: __init__.py  session.py
protoforge/grpc/: protoforge.proto  server.py
protoforge/models/: __init__.py  device.py  fault.py  integration.py  protocol.py  scenario.py  template.py
protoforge/protocols/: __init__.py  base.py  behavior.py
protoforge/sdk/: __init__.py
scripts/: export-openapi.py
sdk/csharp/: ProtoForgeClient.cs
sdk/java/: ProtoForgeClient.java
tests/: conftest.py  test_api.py  test_cnc_metric_generator.py  test_gb28181.py  test_generator.py  test_integration.py  test_lathe_station_templates.py  test_log_bus.py  test_modbus_rtu.py  test_phase3.py  test_phase4.py
web/: index.html  package-lock.json  package.json  playwright.config.js  tsconfig.json  vite.config.js
web/e2e/: app.spec.js
web/scripts/: validate-api.ts
web/src/: App.vue  api.js  config.js  constants.js  i18n.js  main.js  utils.js
(+121 files in other folders)
